--- a/staff/albert-fuente/mucho-layout/mucho-sass/style.css
+++ b/staff/albert-fuente/mucho-layout/mucho-sass/style.css
@@ -30,16 +30,16 @@ header {
 .barra .b {
   margin: 5%;
 }
-.barra .mucho {
+.barra .barra__logo {
   color: #ED3D42;
   font-weight: bold;
   margin-right: 100px;
   font-size: 28px;
 }
-.barra .mucho:hover {
+.barra .barra__logo:hover {
   color: #b31115;
 }
-.barra .navlinks {
+.barra .barra__navlinks {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
@@ -47,17 +47,17 @@ header {
   align-content: center;
   flex-wrap: wrap;
 }
-.barra .navlinks li {
+.barra .barra__navlinks li {
   padding-right: 10px;
   list-style: none;
   color: #c1c1c1;
 }
-.barra .navlinks li a {
+.barra .barra__navlinks li a {
   text-decoration: none;
   font-size: 14px;
   color: #c1c1c1;
 }
-.barra .navlinks li a:hover {
+.barra .barra__navlinks li a:hover {
   color: #000;
 }
 
@@ -236,6 +236,24 @@ footer {
     grid-template-columns: 50% 50%;
     font-size: 16px;
   }
+
+  .imagenes {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: 0.5fr;
+    grid-gap: 7px;
+    height: 180vh;
+  }
+
+  .three {
+    grid-column: 1/2;
+    grid-row: 4/5;
+  }
+
+  .seven {
+    grid-column: 1/2;
+    grid-row: 3/4;
+  }
 }
 @media (max-width: 500px) {
   .barra {
@@ -250,7 +268,7 @@ footer {
     font-size: 24px;
   }
 
-  .desktop {
+  .barra--desktop {
     display: none;
   }
 
