--- a/staff/albert-fuente/mucho-layout/mucho-sass/style.sass
+++ b/staff/albert-fuente/mucho-layout/mucho-sass/style.sass
@@ -27,7 +27,7 @@ header
                 color: $secondary-font-color
     .b
         margin: 5%
-    .mucho
+    .barra__logo
         color: $title-color
         font-weight: bold
         margin-right: 100px
@@ -35,7 +35,7 @@ header
         &:hover
             color: darken($title-color,20)
 
-    .navlinks
+    .barra__navlinks
         display: flex
         flex-direction: row
         justify-content: flex-end
@@ -184,6 +184,19 @@ footer
         display: grid
         grid-template-columns: 50% 50%
         font-size: 16px
+    .imagenes
+        display: grid
+        grid-template-columns:1fr 1fr
+        grid-auto-rows:0.5fr
+        grid-gap: 7px
+        height:180vh
+    .three
+        grid-column: 1/2
+        grid-row: 4/5
+
+    .seven
+        grid-column: 1/2
+        grid-row: 3/4
 
 @media(max-width:500px)
     .barra
@@ -196,7 +209,7 @@ footer
         margin-right: 100px
         font-size: 24px
     
-    .desktop
+    .barra--desktop
         display: none
     
     .imagenes
