--- a/staff/manuel-barzi/initial-app/9/style/index.css
+++ b/staff/manuel-barzi/initial-app/9/style/index.css
@@ -6,74 +6,29 @@
   display: none;
 }
 
-.feedback, .confirm, .alert, .panel {
+.duck-detail, .duck-results, .duck-home, .search, .feedback, .register-success, .register, .login, .landing {
   padding: 0.5rem;
   margin: 1.5rem;
-}
-
-.panel {
   border: 0.1rem solid gray;
   border-radius: 1rem;
   background-color: lightgray;
 }
-.panel__feedback {
-  color: red;
+.landing {
+  background-color: yellow;
 }
 
-.alert {
-  border: 0.1rem solid skyblue;
-  border-radius: 1rem;
-  background-color: rgba(135, 206, 235, 0.4);
-}
-.alert__title {
-  color: #0073ff;
-}
-.alert__body {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  font-weight: 400;
-  font-size: 0.75rem;
-}
-.alert__accept {
-  border: 0.1rem solid skyblue;
-  border-radius: 1rem;
-}
-.alert--danger {
-  border-color: tomato;
-  background-color: rgba(255, 99, 71, 0.283);
-}
-.alert--danger > h2 {
-  color: #ff411f;
-}
-.alert--danger > button {
-  border-color: tomato;
+.login {
+  background-color: orange;
 }
 
-.confirm {
-  border: 0.1rem solid plum;
-  border-radius: 1rem;
-  background-color: #ffcccc;
-}
-.confirm__title {
-  color: violet;
-}
-.confirm__body {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  font-weight: 400;
-  font-size: 0.75rem;
-}
-.confirm__accept {
-  border: 0.1rem solid plum;
-  border-radius: 1rem;
-}
-.confirm__cancel {
-  border: 0.1rem solid plum;
-  border-radius: 1rem;
+.register {
+  background-color: gold;
 }
 
-.feedback {
-  border: 0.1rem solid gray;
-  border-radius: 1rem;
+.register-success {
+  background-color: salmon;
 }
+
 .feedback--success {
   background-color: greenyellow;
 }
@@ -83,6 +38,32 @@
 .feedback--error {
   background-color: red;
   color: white;
+}
+
+.search {
+  background-color: silver;
+}
+
+.duck-home {
+  background-color: greenyellow;
+}
+
+.duck-results {
+  background-color: skyblue;
+}
+.duck-results img {
+  width: 333px;
+}
+
+.duck-detail {
+  background-color: plum;
+}
+.duck-detail__photo {
+  width: 333px;
+}
+.duck-detail__price {
+  background-color: yellow;
+  color: red;
 }
 
 /*# sourceMappingURL=index.css.map */
