--- a/staff/jose-ortuno/initial-app/style/base-settings.sass
+++ b/staff/jose-ortuno/initial-app/style/base-settings.sass
@@ -1,9 +1,16 @@
+// BASE SETTINGS
+$grey: #95a5a6
+$greyl: #bdc3c7
+$red: #e74c3c
+$white: #ecf0f1
+
 // RESET
 *
     margin: 0
     padding: 0
     box-sizing: border-box
     font-size: 16px
+
 // GENERAL
 body
     font-family: Arial, Helvetica, sans-serif
@@ -13,11 +20,14 @@ body
     flex-direction: column
     justify-content: center
     align-items: center
-    
+main
+    text-align: center
+    margin: 10px
 h2, h3
     font-family: 'Lato', sans-serif
     font-size: 1.1rem
-    font-weight: 400 
+    font-weight: 400
+    margin: 10px
 h1
     font-family: 'Lobster', cursive
     font-size: 2rem
@@ -34,3 +44,11 @@ p
     font-family: 'Lato', sans-serif
     font-size: 1rem
     line-height: 1.2rem
+    margin: 10px 0
+    line-height: 1.5
+form
+    margin: 10px
+ul
+    list-style: none
+span
+    margin: 10px 0
