--- a/staff/groups/esputy-corp/esputyfu/components/header/index.sass
+++ b/staff/groups/esputy-corp/esputyfu/components/header/index.sass
@@ -7,11 +7,21 @@
     justify-content: space-between
     width: 100vw
     height: 8rem
-  
+    &__nav
+        margin-top: auto
+        margin-bottom: auto 
+    &__ul
+        display: flex
+        list-style: none
+    &__li   
+        margin-left: 20px
+        
     &__a
         text-decoration: none
         color: white
          margin-top: 20px
+         display: inline
+         
     &__logo
         
         display: inline-block
