--- a/staff/groups/esputy-corp/esputyfu/styles/index.css
+++ b/staff/groups/esputy-corp/esputyfu/styles/index.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+*:focus {
+  outline: none;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -64,10 +68,22 @@ h1 {
   width: 100vw;
   height: 8rem;
 }
+.header__nav {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+.header__ul {
+  display: flex;
+  list-style: none;
+}
+.header__li {
+  margin-left: 20px;
+}
 .header__a {
   text-decoration: none;
   color: white;
   color-margin-top: 20px;
+  color-display: inline;
 }
 .header__logo {
   display: inline-block;
@@ -92,10 +108,10 @@ h1 {
 }
 .footer__title {
   font-family: "Playfair Display", serif;
-  font-size: 18px;
+  font-size: 14px;
 }
 .footer__p {
-  font-size: 14px;
+  font-size: 12px;
   font-family: "Playfair Display", serif;
 }
 
