--- a/staff/groups/skynews-sa/0/style/index.css
+++ b/staff/groups/skynews-sa/0/style/index.css
@@ -20,45 +20,9 @@
   background-image: url("https://image.freepik.com/vector-gratis/diseno-fondo-mapa-mundo_1127-2318.jpg");
 }
 
-.spinner:before {
-  content: "";
-  box-sizing: border-box;
-  position: absolute;
-  top: 70%;
-  left: 50%;
-  height: 80px;
-  width: 80px;
-  margin-top: -30px;
-  margin-left: -30px;
-  border-radius: 50%;
-  border-top: 10px solid #009ee2;
-  border-right: 7px solid transparent;
-  animation: spinner 0.4s linear infinite;
-}
-
-@keyframes spinner {
-  to {
-    transform: rotate(360deg);
-  }
-}
-.nav {
-  width: 100vw;
-  padding: 0.5rem;
-  height: 2.2rem;
-  background-color: #009ee2;
-  display: flex;
-  justify-content: flex-end;
-  text-align: center;
-}
-
 .ul {
   list-style-type: none;
   display: flex;
-}
-
-.nav-but {
-  text-decoration: none;
-  color: white;
 }
 
 .li {
@@ -71,23 +35,9 @@
   text-align: center;
 }
 
-.weather {
-  width: 95vw;
-  margin: 1rem;
-}
-
-.nav-logo {
-  width: 70vw;
-  margin: 2rem auto;
-  display: flex;
-}
-
-.select {
-  width: 60vw;
-  height: 6vh;
-  margin: 1rem auto;
-  display: flex;
-  background-color: white;
+.nav-but {
+  text-decoration: none;
+  color: white;
 }
 
 .button {
@@ -105,49 +55,6 @@
   color: white;
 }
 
-.feed-sec {
-  display: flex;
-  flex-direction: column;
-}
-
-.feedback-button {
-  width: 40vw;
-  height: 6vh;
-  margin: 1rem auto;
-  background-color: rgba(200, 200, 200, 0.5);
-  border: 0.05rem solid #b4b4b4;
-  border-radius: 0.3rem;
-  text-align: center;
-}
-
-.feedback-button:active {
-  background-color: #c8c8c8;
-  color: white;
-}
-
-.results {
-  width: 95vw;
-  min-height: 200px;
-  margin: 0 auto;
-  display: flex;
-  text-align: center;
-  background-color: rgba(255, 255, 255, 0.5);
-  box-shadow: 10px 10px 9px -4px rgba(0, 0, 0, 0.1);
-  border-radius: 0.3rem;
-}
-
-.results__ul {
-  list-style-type: none;
-  display: flex;
-  width: 95vw;
-  margin: 1rem auto;
-  flex-wrap: wrap;
-}
-
-.results__li {
-  width: 95vw;
-}
-
 .title {
   margin-top: 2rem;
 }
@@ -155,6 +62,31 @@
 .img {
   width: 90vw;
   margin: 1rem auto;
+}
+
+.back {
+  width: 5rem;
+}
+
+.art-ul {
+  list-style-type: none;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.art-li {
+  font-size: 0.8em;
+  margin-right: 0.2rem;
+  background-color: rgba(180, 180, 180, 0.5);
+  align-self: center;
+  padding: 0.3rem;
+  border-radius: 0.4rem;
+  text-align: center;
+}
+
+.art-but {
+  text-decoration: none;
+  color: black;
 }
 
 .detail {
@@ -165,45 +97,20 @@
   box-shadow: 10px 10px 9px -4px rgba(0, 0, 0, 0.1);
   border-radius: 0.3rem;
 }
-
 .detail__img {
   width: 90vw;
   margin-top: 1rem;
 }
-
 .detail__data {
   font-size: 0.6rem;
 }
-
 .detail__description {
   font-size: 0.8rem;
   margin: 1rem 0;
 }
 
-.nav__hello {
-  margin: auto 6rem auto 0;
-  color: white;
-  font-size: 0.9rem;
-}
-
-.favorites {
-  width: 95vw;
-  text-align: center;
-  margin: auto;
-}
-
-.fav-logo {
-  width: 60vw;
-  margin: 4rem auto;
-  display: flex;
-}
-
-.search {
-  text-align: center;
-}
-
-.search__title {
-  margin: 1rem auto;
+.main {
+  width: 100vw;
 }
 
 .compo-nav {
@@ -243,31 +150,46 @@ input {
   padding: 2px;
 }
 
-.back {
-  width: 5rem;
-}
-
-.fav-logo-bco {
-  height: 80%;
-  padding-left: 0.45rem;
-}
-
-.main {
+.nav {
   width: 100vw;
-}
-
-.feedback-section {
-  width: 60vw;
-  margin: 1rem auto;
-  padding: 0.8rem 0.8rem 0.8rem;
-  background-color: rgba(255, 0, 0, 0.5);
+  padding: 0.5rem;
+  height: 2.2rem;
+  background-color: #009ee2;
+  display: flex;
+  justify-content: flex-end;
   text-align: center;
+}
+.nav__hello {
+  margin: auto 6rem auto 0;
   color: white;
-  font-size: 0.8rem;
-  border-radius: 0.3rem;
+  font-size: 0.9rem;
 }
 
-.reg__success-nav {
+.query-search {
+  display: flex;
+  flex-direction: column;
+}
+
+.go-query {
+  width: 100vw;
+  font-size: 0.8rem;
+  text-align: center;
+  color: black;
+}
+
+.favorites {
+  width: 95vw;
+  text-align: center;
+  margin: auto;
+}
+
+.fav-logo {
+  width: 60vw;
+  margin: 4rem auto;
+  display: flex;
+}
+
+.reg-success__nav {
   width: 100%;
   padding: 0.2rem;
   height: 2.2rem;
@@ -276,8 +198,7 @@ input {
   justify-content: flex-start;
   align-items: center;
 }
-
-.reg__success-section {
+.reg-success__section {
   width: 90vw;
   margin-top: 2rem;
   padding: 2rem;
@@ -291,37 +212,108 @@ input {
   align-items: center;
 }
 
-.art-ul {
+.fav-logo-bco {
+  height: 80%;
+  padding-left: 0.45rem;
+}
+
+.results {
+  width: 95vw;
+  min-height: 200px;
+  margin: 0 auto;
+  display: flex;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.5);
+  box-shadow: 10px 10px 9px -4px rgba(0, 0, 0, 0.1);
+  border-radius: 0.3rem;
+}
+.results__ul {
   list-style-type: none;
   display: flex;
-  justify-content: space-evenly;
+  width: 95vw;
+  margin: 1rem auto;
+  flex-wrap: wrap;
+}
+.results__li {
+  width: 95vw;
 }
 
-.art-li {
-  font-size: 0.8em;
-  margin-right: 0.2rem;
-  background-color: rgba(180, 180, 180, 0.5);
-  align-self: center;
-  padding: 0.3rem;
-  border-radius: 0.4rem;
+.select {
+  width: 60vw;
+  height: 6vh;
+  margin: 1rem auto;
+  display: flex;
+  background-color: white;
+}
+
+.search {
   text-align: center;
 }
-
-.art-but {
-  text-decoration: none;
-  color: black;
+.search__title {
+  margin: 1rem auto;
 }
 
-.query-search {
+.nav-logo {
+  width: 70vw;
+  margin: 2rem auto;
+  display: flex;
+}
+
+.spinner:before {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  height: 80px;
+  width: 80px;
+  margin-top: -30px;
+  margin-left: -30px;
+  border-radius: 50%;
+  border-top: 10px solid #009ee2;
+  border-right: 7px solid transparent;
+  animation: spinner 0.4s linear infinite;
+}
+
+@keyframes spinner {
+  to {
+    transform: rotate(360deg);
+  }
+}
+.weather {
+  width: 95vw;
+  margin: 1rem;
+}
+
+.feedback-section {
+  width: 60vw;
+  margin: 1rem auto;
+  padding: 0.8rem 0.8rem 0.8rem;
+  background-color: rgba(255, 0, 0, 0.5);
+  text-align: center;
+  color: white;
+  font-size: 0.8rem;
+  border-radius: 0.3rem;
+}
+
+.feed-sec {
   display: flex;
   flex-direction: column;
 }
 
-.go-query {
-  width: 100vw;
-  font-size: 0.8rem;
+.feedback-button {
+  width: 40vw;
+  height: 6vh;
+  margin: 1rem auto;
+  background-color: rgba(200, 200, 200, 0.5);
+  border: 0.05rem solid #b4b4b4;
+  border-radius: 0.3rem;
   text-align: center;
-  color: black;
+}
+
+.feedback-button:active {
+  background-color: #c8c8c8;
+  color: white;
 }
 
 /*# sourceMappingURL=index.css.map */
