--- a/staff/groups/skynews-sa/0/style/index.sass
+++ b/staff/groups/skynews-sa/0/style/index.sass
@@ -1,280 +1,11 @@
-@media only screen and (min-width: 320px) and (max-width: 767px)
-  
-*
-  margin: 0
-  padding: 0
-  box-sizing: border-box
-  
-.show
-  display: block
-    
-.hide
-  display: none
-
-.body
-  width: 100vw
-  font-family: 'Roboto', sans-serif
-  font-size: 1em
-  color: rgb(85, 85, 85)
-  background-image: url('https://image.freepik.com/vector-gratis/diseno-fondo-mapa-mundo_1127-2318.jpg')
-
-.spinner:before
-  content:""
-  box-sizing: border-box
-  position: absolute
-  top: 70%
-  left: 50%
-  height: 80px
-  width: 80px
-  margin-top: -30px
-  margin-left: -30px
-  border-radius: 50%
-  border-top:10px solid #009ee2
-  border-right:7px solid transparent
-  animation: spinner 0.4s linear infinite
-
-@keyframes spinner
-  to
-    transform: rotate(360deg)
-
-.nav
-  width: 100vw
-  padding: 0.5rem
-  height: 2.2rem
-  background-color: rgb(0,158,226)
-  display: flex
-  justify-content: flex-end
-  text-align: center
-
-.ul
-  list-style-type: none
-  display: flex
-
-.nav-but
-  text-decoration: none
-  color: rgb(255,255,255)
-
-.li
-  font-size: 0.8em
-  margin-right: 0.2rem
-  background-color: rgba(241, 239, 235, 0.2)   
-  width: 5rem
-  align-self: center
-  padding: 0.3rem
-  text-align: center
-
-.weather
-  width: 95vw
-  margin: 1rem
-
-.nav-logo
-  width: 70vw
-  margin: 2rem auto
-  display: flex
-
-.select
-  width: 60vw
-  height: 6vh
-  margin: 1rem auto
-  display: flex
-  background-color: rgb(255,255,255)
-
-.button
-  width: 40vw
-  height: 6vh
-  margin: 1rem auto
-  background-color: rgba(200,200,200,0.5)
-  border: 0.05rem solid rgb(180,180,180)
-  border-radius: 0.3rem
-  text-align: center
-
-.button:active
-  background-color: rgba(200,200,200,1)
-  color: rgb(255,255,255)
-
-.feed-sec
-  display: flex
-  flex-direction: column
-
-.feedback-button
-  width: 40vw
-  height: 6vh
-  margin: 1rem auto
-  background-color: rgba(200,200,200,0.5)
-  border: 0.05rem solid rgb(180,180,180)
-  border-radius: 0.3rem
-  text-align: center
-
-.feedback-button:active
-  background-color: rgba(200,200,200,1)
-  color: rgb(255,255,255)
-
-.results
-  width: 95vw
-  min-height: 200px
-  margin: 0 auto
-  display: flex
-  text-align: center
-  background-color: rgba(255, 255, 255, 0.5)
-  box-shadow: 10px 10px 9px -4px rgba(0, 0, 0, 0.1)
-  border-radius: 0.3rem
-
-.results__ul
-  list-style-type: none
-  display: flex
-  width: 95vw
-  margin: 1rem auto
-  flex-wrap: wrap
-
-.results__li
-  width: 95vw
-
-.title
-  margin-top: 2rem
-
-.img
-  width: 90vw
-  margin: 1rem auto
-
-.detail
-  width: 95vw
-  margin: 1rem auto 2rem auto
-  padding: 0.8rem
-  background-color: rgba(255, 255, 255, 0.5)
-  box-shadow: 10px 10px 9px -4px rgba(0, 0, 0, 0.1)
-  border-radius: 0.3rem
-
-.detail__img
-  width:90vw
-  margin-top: 1rem
-
-.detail__data
-  font-size: 0.6rem
-
-.detail__description
-  font-size: 0.8rem
-  margin: 1rem 0
-
-.nav__hello
-  margin: auto 6rem auto 0  
-  color: rgb(255,255,255)
-  font-size: 0.9rem
-
-.favorites
-  width: 95vw
-  text-align: center
-  margin: auto
-  
-.fav-logo
-  width: 60vw
-  margin: 4rem auto
-  display: flex
-
-.search
-  text-align: center 
-
-.search__title
-  margin: 1rem auto
-
-.compo-nav
-  width: 100%
-  padding: 0.2rem 
-  height: 2.2rem
-  background-color: #009ee2
-  display: flex
-  justify-content: space-between
-  align-items: center
-
-.form-section
-  width: 90vw
-  margin-top: 2rem
-  padding: 2rem
-  margin: 2rem auto
-  background-color: rgba(255, 255, 255, 0.5)
-  box-shadow: 10px 10px 9px -4px rgba(0, 0, 0, 0.1)
-  border-radius: 0.3rem
-  text-align: center
-  justify-content: center
-  flex-direction: column
-  align-items: center
-
-.form
-  margin-top: 2rem
-  
-input 
-  width: 100%
-  height: 1.5rem
-  margin: 0.2rem 0 1rem 0
-  border-radius: 0.3rem
-  border: 0.05rem solid #b4b4b4
-  padding: 2px
-
-.back
-  width: 5rem
-
-.fav-logo-bco
-  height: 80%
-  padding-left: 0.45rem
-
-.main
-  width: 100vw
-
-.feedback-section
-  width: 60vw
-  margin: 1rem auto
-  padding: 0.8rem 0.8rem 0.8rem 
-  background-color: rgba(255, 0, 0, 0.5)
-  text-align: center
-  color: rgb(255,255,255)
-  font-size: 0.8rem
-  border-radius: 0.3rem
-
-.reg__success-nav
-  width: 100%
-  padding: 0.2rem 
-  height: 2.2rem
-  background-color: #009ee2
-  display: flex
-  justify-content: flex-start
-  align-items: center
-
-.reg__success-section
-  width: 90vw
-  margin-top: 2rem
-  padding: 2rem
-  margin: 2rem auto
-  background-color: rgba(255, 255, 255, 0.5)
-  box-shadow: 10px 10px 9px -4px rgba(0, 0, 0, 0.1)
-  border-radius: 0.3rem
-  text-align: center
-  justify-content: center
-  flex-direction: column
-  align-items: center
-
-.art-ul
-  list-style-type: none
-  display: flex
-  justify-content: space-evenly
-
-.art-li
-  font-size: 0.8em
-  margin-right: 0.2rem
-  background-color: rgba(180, 180, 180, 0.5)   
-  align-self: center
-  padding: 0.3rem
-  border-radius: 0.4rem
-  text-align: center
-
-.art-but
-  text-decoration: none
-  color: rgb(0,0,0)
-
-.query-search
-  display: flex
-  flex-direction: column
-
-.go-query
-  width: 100vw
-  font-size: 0.8rem
-  text-align: center
-  color: rgb(0,0,0)
+@import ../components/components
+@import ../components/article-detail
+@import ../components/form
+@import ../components/landing
+@import ../components/register-success
+@import ../components/results
+@import ../components/search
+@import ../components/spinner
+@import ../components/weather
+@import ../components/feedback/feedback
+@import ../components/modal/modal
