--- a/staff/groups/over-cook-sa/overcooked/style/index.sass
+++ b/staff/groups/over-cook-sa/overcooked/style/index.sass
@@ -2,6 +2,9 @@
   margin: 0
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
   
+.hide
+  display: none
+
 .feedback--error 
   color: red
 
@@ -14,11 +17,14 @@
 body 
   width: 100vw
   display: flex 
+  height: 100vh
 
 input
   border: 0.09rem solid rgba(0,0,0,0.3)
+  margin: 0.2rem
+  opacity: 0.8
  
-select, button, a
+select, button
     margin: 0.5rem
     text-align: center
     padding-top: 0.4rem
@@ -28,13 +34,13 @@ select, button, a
     margin-top: 1rem
     align-self: center
     border: none
-    font-family: Verdana, Geneva, Tahoma, sans-serif
     font-weight: bold
     background-color: #4091cc
     color: white !important
 
 a
     text-decoration: none
+    padding-top: 0 !important
 
 
 ul 
@@ -53,39 +59,42 @@ main
   display: flex
   width: 100vw
 
-.back-img 
-  display: flex
-  background-color: white
+
+
+.backgroundLan
+  background-image: url(img/fondo-landing.png)
   background-size: cover
-  display: block
-  width: 100%
+  height: 100vh
+
+
+.landingButton
+  background-color: rgba(91, 177, 222, 0.8)
 
 .landingContainer 
   display: flex
   padding-top: 1%
+  width: 100vw
+  margin: 0 0 0 0
   
   &_container
-    background-color: aliceblue
-    border: 2px solid rgba(0,0,0,0.3)
-    box-shadow: 0 4px 6px #bbb
-    background: #fff
-    border-radius: 3px
-    -moz-border-radius: 3px
-    -webkit-border-radius: 3px
     padding: 1vw
-
-.landingContainer
-    margin: 0 0 0 5px
+    margin: 2rem auto
 
 .landingContainer li 
-    margin: 1vw
+    margin: 2vw
+    
 
 .landingContainer a 
+    color: white !important
     text-decoration: none
     font-size: 0.8em
     color: black
     font-weight: bolder
+    border-radius: 6px
+    box-shadow: 0 4px 6px #bbb
+    padding: 0.5rem
  
+
 .landingContainer label
   margin: 1vw
 
@@ -97,26 +106,23 @@ main
   
 
 .random-content
-    border: 2px solid rgba(0,0,0,0.3)
+    display: block
     padding: 0 20px 20px 20px
     margin: 60px auto
     box-shadow: 0 4px 6px #bbb
-    background: #fff
+    background-color: rgba(255, 255, 255, 0.6)
     border-radius: 3px
     -moz-border-radius: 3px
     -webkit-border-radius: 3px
     padding: 10px
     width: 80vw
     height: 70vw
-
-.random-content h2
     font-size: 15px
 
 .random-content h3
     font-size: 12px
 
 .random-recipe 
-    display: flex
     flex-wrap: wrap
     flex-direction: column
     align-content: center
@@ -132,7 +138,7 @@ main
     top: 0
     width: 100%
     padding-top: 2rem
-    background-color: white
+    background-image: url(img/fondo-landing.png)
     border-bottom: 1px solid rgba(0,0,0,0.3)
 
 .footer
@@ -200,15 +206,12 @@ main
     padding: 1rem
 
 .btnGo
-    margin-top: 1rem
     align-self: center
     border: none
-    font-family: Verdana, Geneva, Tahoma, sans-serif
     font-weight: bold
-    background-color: #4091cc
-    height: 1.7rem
+    background-color: rgba(91, 177, 222, 0.8)
     color: white
-    width: 4rem
+
 
 .backButton
     text-align: center
@@ -221,10 +224,8 @@ main
     border: none
     font-family: Verdana, Geneva, Tahoma, sans-serif
     font-weight: bold
-    background-color: #4091cc
-    height: 1.3rem
+    background-color: rgba(91, 177, 222, 0.8)
     color: white !important
-    width: 4rem
 
 .homeHeader
     text-align: center
@@ -246,8 +247,25 @@ main
     color: white
     width: 1rem
 
+.home-main
+    
+
+.user
+    display: flex
+
 .home-welcome
     margin-bottom: 0.5rem
+    color: white
+    margin: 0
+
+.user-welcome
+  background-color: #4091cc
+  opacity: 0.8
+  border-radius: 2px
+  width: 30vw
+
+.smallHeader-buttons
+
 
 .search
     margin-top: 1.5rem
