--- a/staff/juan-bovo/express-app/style/index.sass
+++ b/staff/juan-bovo/express-app/style/index.sass
@@ -1,8 +1,16 @@
 *
-    border: 1px solid black
-    padding: 10px
-    margin: 10px
+  margin: 0
+  padding: 0
+  box-sizing: border-box
 
+@import url("https://fonts.googleapis.com/css?family=Ribeye+Marrow&display=swap")
+@import ../utils/round-border
+@import ./base-settings
+@import ../components/html
 @import ../components/header
-
-
+@import ../utils/forms
+@import ../components/lang-selector
+@import ../components/duck-results
+@import ../components/fav-button
+@import ../components/duck-detail
+@import ../components/feeback
