--- a/staff/albert-fuente/skyshop/skyshop-app/src/components/App/index.sass
+++ b/staff/albert-fuente/skyshop/skyshop-app/src/components/App/index.sass
@@ -351,17 +351,19 @@ input
   
   body
     background-color: #E5E5E5
-  
+
+.detail-title
+  font-size: 1.5rem
+  font-weight: bold
+  text-align: center
+  grid-area: w
 
   
-  .detail-picture
-    font-size: 0.8em
-    margin-right: 0.2rem
-    width: 16rem
-    align-self: center
-    padding: 0.3rem
-    text-align: center
-    grid-area: x
+.detail-picture
+  font-size: 0.8em
+  margin-left: 2rem
+  width: 16rem
+  grid-area: x
 
 .detail-price
   font-weight: bold
@@ -379,7 +381,7 @@ input
     padding-top: 0.75rem
     padding-bottom: 0.75rem
     display: grid
-    grid-template-areas: 'x ' 'z' 'y'
+    grid-template-areas: 'w' 'x' 'z' 'y'
 
 
   .backProduct
@@ -504,6 +506,18 @@ label
   margin-top: 1.5rem
   color: #333
 
+.userCart-backArrow
+  margin: 1rem
+  color: #333
+
+.userCart-total
+  color: #333
+  text-align: center
+
+.userCart-hidden
+  display: none
+  
+
 .formPanel-submit
   margin-top: 1rem
   padding: 0.5rem
@@ -591,10 +605,15 @@ label
 .product-picture
   font-size: 0.8em
   margin-right: 0.2rem
-  width: 8rem
-  align-self: center
-  padding: 0.3rem
-  text-align: center
+  max-width: 0.1%
+  max-height: 0.1%
+  grid-area: x
+
+img
+  width: 100%
+  border-radius: 5%
+
+.product-image
   grid-area: x
 
 .product-price
@@ -606,15 +625,14 @@ label
   grid-area: z
 
 .product
-  margin: 1rem
-  border-top: 0.05rem solid grey
+  margin: 1.5rem
   border-bottom: 0.05rem solid grey
   padding-top: 0.75rem
   padding-bottom: 0.75rem
   text-decoration: none
   list-style: none
   display: grid
-  grid-template-areas: 'x y' 'x z'
+  grid-template-areas: "x x" "y z"
 
 
 //SPINNER
@@ -694,7 +712,7 @@ label
   color: #fff
 
 .backFromDetail
-  margin-top: 1.5rem
+  margin-top: 1rem
   margin: 2rem
   color: #333
 
@@ -703,17 +721,28 @@ label
 
 .userCart
   background-color: #f7f7f7
-  padding: 1.5rem
-  margin: 2rem
+  padding: 1rem
+  margin: 1rem
   list-style: none
+
+.userCart-title
+  text-align: center
+  font-weight: bold
+
+.userCart-description
+  text-align: center
 
 .userCart-quantity
   padding: 1rem
+
+.userCart-description
+  
 
 .fa-times-circle
   margin-buttom: 1rem
   margin-left: 100%
   color: #BD2031
+
 
 .select-filter
   width: 40vw
