--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/style/index.css
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/style/index.css
@@ -1,3 +1,225 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,700);
+/* http://meyerweb.com/eric/tools/css/reset/ 
+ * v2.0 | 20110126
+ * License: none (public domain) */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
 
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: "";
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+.links {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+  background-color: white;
+  font-size: 18px;
+  display: block;
+  padding: 3%;
+  width: 25%;
+  margin: 5px auto;
+  text-align: center;
+}
+
+.links {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+  background-color: white;
+  font-size: 18px;
+  display: block;
+  padding: 3%;
+  width: 25%;
+  margin: 5px auto;
+  text-align: center;
+}
+
+form {
+  padding: 10%;
+  text-align: center;
+}
+form__form--inputs {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+}
+
+label {
+  font-size: 18px;
+}
+
+input {
+  padding: 2%;
+  margin: 2%;
+}
+
+.links {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+  background-color: white;
+  font-size: 18px;
+  display: block;
+  padding: 3%;
+  width: 25%;
+  margin: 5px auto;
+  text-align: center;
+}
+
+form {
+  padding: 10%;
+  text-align: center;
+}
+form__form-inputs {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+}
+
+label {
+  font-size: 18px;
+}
+
+input {
+  padding: 2%;
+  margin: 2%;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  background-color: #00818a;
+  padding: 10px;
+  border-radius: 10px;
+  grid-gap: 25px 10px;
+}
+
+.item {
+  background-color: #293462;
+  border: 1px solid #fff;
+  padding: 20px;
+  font-size: 20px;
+  text-align: center;
+}
+
+.item1 {
+  width: 10%;
+  margin: 0 auto;
+  grid-column-start: 1;
+  grid-column-end: 5;
+}
+
+.item10 {
+  width: 20%;
+  margin: 0 auto;
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+
+.item11 {
+  width: 20%;
+  margin: 0 auto;
+  grid-column-start: 3;
+  grid-column-end: 5;
+}
+
+button {
+  color: black;
+  background-color: white;
+  font-size: 16px;
+  display: block;
+  padding: 5px;
+  width: 30%;
+  margin: 10px auto;
+  text-align: center;
+}
+
+.header-app {
+  background-color: white;
+  padding: 10px;
+  text-align: center;
+  font-size: 25px;
+}
+
+.header-access {
+  padding: 10%;
+}
+
+body {
+  background-color: #216583;
+}
+
+h1 {
+  color: white;
+  font-size: 30px;
+  text-align: center;
+  margin: 5%;
+}
+
+h2 {
+  color: white;
+  font-size: 20px;
+  text-align: center;
+  margin: 10%;
+}
 
 /*# sourceMappingURL=index.css.map */
