--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/style/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/style/index.sass
@@ -1,50 +1,22 @@
+@import "reset"
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,700)
+@import ../components/Landing
+@import ../components/Login
+@import ../components/Register
 @import ../components/MyLineup
+@import ../components/InitialHeader
 
-
-//Container lineUp
-
-.container
-    display: grid
-    grid-template-columns: auto auto auto auto
-    background-color: #00818a
-    padding: 10px
-    border-radius: 10px
-    grid-gap: 25px 10px
     
+body 
+    background-color: #216583
+h1
+    color: white
+    font-size: 30px
+    text-align: center
+    margin:  5%
 
-.item 
-
-    background-color: #293462
-    border: 1px solid #fff
-    padding: 20px
+h2 
+    color: white
     font-size: 20px
     text-align: center
-
-.item1
-    width: 10%
-    margin: 0 auto
-    grid-column-start: 1
-    grid-column-end: 5
-   
-.item10
-    width: 20%
-    margin: 0 auto
-    grid-column-start: 1
-    grid-column-end: 3
-
-.item11
-
-    width: 20%
-    margin: 0 auto
-    grid-column-start: 3
-    grid-column-end: 5
-
-button
-    color: black
-    background-color: white
-    font-size: 16px
-    display: block
-    padding: 5px
-    width: 30%
-    margin: 10px auto
-    text-align: center 
+    margin:  10%
